# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.76 2008-02-17 16:16:09 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --
2.2.6 (2008/??/??)
 - (2008/02/15) Fixed non fixed font and wrong new line breaking problem on
    safari in textarea input fields (updated Kernel/Output/HTML/Standard/css.dtl
    and Kernel/Output/HTML/Standard/customer-css.dtl).
 - (2008/02/15) Fixed bug# 2694 - URL-to-long-error in
    AdminCustomerUserService mask on changing settings.
 - (2008/02/14) Fixed bug# 2239 - CustomerCompanySupport is broken when
    using external backend DB.
 - (2008/02/12) Fixed bug# 2533 - Wide character error when searching for a
    customer with umlaut in LDAP backend with cache option (CacheTTL) in
    CustomerUser config option.
 - (2008/02/12) Fixed bug# 2638 - Broken email syntax check if
    _somebody@example.com is used.
 - (2008/02/12) Fixed bug# 1957 - Auto reply for new Phone-Tickets goes to
    non-existing addresses (if no email addres is given in From field).
 - (2008/02/12) Fixed bug# 2363 - AgentTicketPhone###Body is now a text area
    instead of a string.
 - (2008/02/11) Fixed bug# 1975 - OTRS cannot forward .eml files.
 - (2008/02/11) Fixed bug# 2413 - OTRS cannot write to BLOB column in table
    XML_STORAGE with DB2.
 - (2008/02/06) Fixed bug# 1716 - Wrong escalation time calculation on
    wintertime/summertime switch.
 - (2008/02/01) Fixed ticket# 2008012242000417 - View performance problems
    if more then 1000 customer companies are in the database available.

2.2.5 (2008/01/28)
 - (2008/01/25) Fixed bug# 2645 - SLA selection doesn't change when customer is
    changed.
 - (2008/01/16) Fixed bug# 2157 - Ticket merged note not translated.